# unitpay

./: README.md  index.html
contract/solana/: Anchor.toml  Cargo.toml  lib.rs
css/: payment.css  solana-style.css  style.css  styles.css  transaction-modal.css
public/: approve.html  index.html  lp.html  payment-detail.html  payment-tasks.html  payment.html  paypal-dashboard.html
public/js/: app.js  config.js  lp.js  network.config.js  order.js  payment.js  paypal.js  solana-adapter.js  solana-integration.js
src/: app.js  index.js
src/controllers/: contract.controller.js  lp.controller.js  payment-intent.controller.js  payment.controller.js  paypal.controller.js  settlement.controller.js  task.controller.js  wallet.controller.js
